bug fix to now playing page ensuring current page is updated alongside searched movies

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section id="top">
         <div id="navbar">
-            <a href="index.html" id="homebutton"><div>F L I X T E R 🍿</div></a>
+            <a href="index.html" id="homebutton"><div>F L I X S T E R 🍿</div></a>
         </div>
     </section>
     <section class="search">
