adds calls and attributions to JustWatch; displays watch providers for each movie

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div>
             <form id="search-form">
                 <div class="wrapper">
-                    <input id="search-input" title="Search for movies" type="text" placeholder="Original, translated, and alternative titles." autofocus>
+                    <input id="search-input" title="Search for movies" type="text" placeholder="Enter original, translated, or alternative titles." autofocus>
                     <button id="search-button" type="submit">
                         <i title="Search button" class="icon fa-solid fa-magnifying-glass fa-2xl"></i>
                     </button>
